# yote

./: .gitignore  README.md
docs/internal/: Battery.txt  Defects.txt  Microphone.txt  Notes on bom.txt  RIC wire.txt  Useful libraries.txt
docs/internal/not used/: yote-bom-with-notes.csv  yote-bom.csv
firmware/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/lib/: README.md  chapro.h
firmware/src/: lib.rs  play_state.rs  wave.rs
firmware/src/hw_dsp/: README.md  config.rs  dsp.rs  mod.rs  shared_bus.rs
firmware/src/sw_dsp/: README.md  chapro.rs  mod.rs  plugin.rs
freecad/crystal/: R2016-32Mhz-8pF-Crystal-Fillet.step  R2016-32Mhz-8pF-Crystal.FCStd  R2016-32Mhz-8pF-Crystal.FCStd1
freecad/full/: board.FCStd  board.FCStd1
freecad/npn transistor/: TP5001P3.step  npn.FCStd  npn.FCStd1
kicad/yote/: README.md  dsp.kicad_sch  dsp.kicad_sch-bak  fp-info-cache  mcu.kicad_sch  power.kicad_sch  yote.kicad_pcb  yote.kicad_prl  yote.kicad_pro  yote.kicad_sch
kicad/yote/manufacture/: README.txt  yote-B_Cu.gbr  yote-B_Mask.gbr  yote-B_Paste.gbr  yote-B_Silkscreen.gbr  yote-Edge_Cuts.gbr  yote-F_Cu.gbr  yote-F_Mask.gbr  yote-F_Paste.gbr  yote-F_Silkscreen.gbr  yote-In1_Cu_Gnd.gbr  yote-In2_Cu_Sig.gbr  yote-In3_Cu_Pwr.gbr  yote-In4_Cu_Gnd.gbr  yote-In5_Cu_Sig.gbr  yote-In6_Cu_Gnd.gbr  yote-NPTH.drl  yote-PTH.drl  yote-bom.xlsx  yote-bottom.pos  yote-top.pos
kicad/yote/manufacture/W670752AS1K1-production file/: 2nd  drl  gbl  gbo  gbp  gbs  gko  gtl  gto  gtp  gts  l2  l3  l4  l5  l6  l7
kicad/yote/manufacture/manual-rotation-and-alignment-with-pcbway/: yote-B_Cu.gbr  yote-B_Mask.gbr  yote-B_Paste.gbr  yote-B_Silkscreen.gbr  yote-Edge_Cuts.gbr  yote-F_Cu.gbr  yote-F_Mask.gbr  yote-F_Paste.gbr  yote-F_Silkscreen.gbr  yote-In1_Cu_Gnd.gbr  yote-In2_Cu_Sig.gbr  yote-In3_Cu_Pwr.gbr  yote-In4_Cu_Gnd.gbr  yote-In5_Cu_Sig.gbr  yote-In6_Cu_Gnd.gbr  yote-NPTH.drl  yote-PTH.drl
